[tool.poetry]
name = "uil-mscs-scraper"
version = "0.1.0"
description = "A scraper for math, science, and computer science official results from the UIL Academics website."
authors = ["Eridani Alcantar <ealcantar@utexas.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
